# bevy-voxel-engine

./: .gitignore  Cargo.toml  README.md  render-graph.dot  rust-toolchain.toml
assets/: common.wgsl  compute.wgsl  denoise.wgsl  monu9-2.vox  monu9.vox  nature.vox  raytracing.wgsl  reprojection.wgsl  shader.wgsl  voxelization.wgsl
assets/compute/: animation.wgsl  automata.wgsl  clear.wgsl  physics.wgsl  rebuild.wgsl
assets/models/guns/: portal_gun.blend
assets/vox/: CREDITS.md  bad_file.vox  big.vox  blob.vox  boxes.vox  defualt.vox  empty.vox  map1.vox  material-test.vox  monu1.vox  monu10.vox  monu9.vox  odyssey_scene.vox  phantom_mansion.vox  pieta.vox  portals.vox  room.vox  sparse.vox  stress_test.vox  tree.vox  treehouse.vox
bevy-voxel-engine/: Cargo.toml
bevy-voxel-engine/src/: animation.rs  compute.rs  lib.rs  load.rs  physics.rs  trace.rs
bevy-voxel-engine/src/voxel_pipeline/: attachments.rs  clear.rs  mod.rs  voxel_world.rs  voxelization.rs
bevy-voxel-engine/src/voxel_pipeline/compute/: animation.rs  automata.rs  clear.rs  mod.rs  node.rs  physics.rs  rebuild.rs
bevy-voxel-engine/src/voxel_pipeline/denoise/: mod.rs  node.rs
bevy-voxel-engine/src/voxel_pipeline/shaders/: denoise.wgsl  reprojection.wgsl
bevy-voxel-engine/src/voxel_pipeline/shaders/compute/: clear.wgsl
bevy-voxel-engine/src/voxel_pipeline/trace/: mod.rs  node.rs
bevy-voxel-engine/src/voxel_pipeline/voxelization_node/: mod.rs  node.rs
examples/: features.rs  minimal.rs  sand.rs
examples/common/: character.rs  ui.rs
examples/features/: character.rs  fps_counter.rs  main.rs  ui.rs
src/: LAYOUT.md  animation.rs  character.rs  compute.rs  fps_counter.rs  lib.rs  load.rs  main.rs  physics.rs  trace.rs  ui.rs
src/portal_test/: character.rs  fps_counter.rs  main.rs  ui.rs
src/voxel_engine/: LAYOUT.md  animation.rs  compute.rs  lib.rs  load.rs  trace.rs
src/voxel_pipeline/: attachments.rs  mod.rs  voxel_world.rs  voxelization.rs
src/voxel_pipeline/compute/: animation.rs  animation.wgsl  automata.rs  automata.wgsl  clear.rs  mip.rs  mod.rs  physics.rs  physics.wgsl  rebuild.rs  rebuild.wgsl
src/voxel_pipeline/denoise/: mod.rs  node.rs
src/voxel_pipeline/shaders/: bindings.wgsl  common.wgsl  denoise.wgsl  raytracing.wgsl  reprojection.wgsl  trace.wgsl  voxelization.wgsl
src/voxel_pipeline/shaders/compute/: animation.wgsl  automata.wgsl  clear.wgsl  mip.wgsl  physics.wgsl  rebuild.wgsl
src/voxel_pipeline/trace/: bindings.wgsl  mod.rs  node.rs  raytracing.wgsl  trace.wgsl
