[package]
name = "bevy-voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = true, features = [
    "render",
    "x11",
    "filesystem_watcher",
    "png",
] }
bytemuck = "1.10"
dot_vox = "5.1"
wgpu = "0.14"
